--- a/package.json
+++ b/package.json
@@ -3,10 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/core": "^10.0.15",
+    "@emotion/styled": "^10.0.15",
     "@material-ui/core": "^4.3.1",
+    "@rebass/preset": "^4.0.0",
+    "emotion-theming": "^10.0.14",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-landing-page": "^2.0.2",
+    "react-mdl": "^1.11.0",
+    "react-scripts": "3.0.1",
+    "react-slick": "^0.24.0",
+    "rebass": "^3.2.2",
+    "styled-components": "^5.0.0-beta.8",
+    "styled-system": "^5.0.18"
   },
   "scripts": {
     "start": "react-scripts start",
